tests/ui/comptime/feature-gate-test.stderr
error[E0658]: use of unstable library feature `comptime`: `comptime` has open design concerns
  --> $DIR/feature-gate-test.rs:1:3
   |
LL | #[comptime]
   |   ^^^^^^^^
   |
   = note: see issue #146922 <https://github.com/rust-lang/rust/issues/146922> for more information
   = help: add `#![feature(comptime)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
