tests/ui/comptime/feature-gate-test.rs
#[comptime]
//~^ ERROR use of unstable library feature `comptime`
fn foo() {}

fn main() {}
